@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/directoryadministrator/Attic/directoryadministrator-1.4.ebuild,v 1.3 2003/09/08 07:39:14 msterret Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-nds/directoryadministrator/Attic/directoryadministrator-1.4.ebuild,v 1.4 2004/04/30 13:10:06 dholm Exp $
 
 MY_PN="directory_administrator"
 S="${WORKDIR}/${MY_PN}-${PV}"
