@@ -1,6 +1,10 @@
 # ChangeLog for net-nds/directoryadministrator
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-nds/directoryadministrator/Attic/ChangeLog,v 1.2 2003/06/30 23:14:03 aliz Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-nds/directoryadministrator/Attic/ChangeLog,v 1.3 2004/04/30 13:10:06 dholm Exp $
+
+  30 Apr 2004; David Holm <dholm@gentoo.org>
+  directoryadministrator-1.5.1.ebuild:
+  Added to ~ppc.
 
 *directoryadministrator-1.5.1 (30 Jun 2003)
 
